declare_args() {
  stm32f1xx_device_define = ""
}

declare_args() {
  stm32f1xx_device_def = ""
  stm32f1xx_device_pkg = "chip/stm32f1xx/stm32f1xx_device"
  stm32f1xx_device_ver = "latest"
  stm32f1xx_device_api =
      "https://api.github.com/repos/STMicroelectronics/cmsis_device_f1/tags"
  stm32f1xx_device_url = "https://github.com/STMicroelectronics/cmsis_device_f1/archive/refs/tags/v{version}.tar.gz"
}

declare_args() {
  if (stm32f1xx_device_def == "") {
    print(">> package ${stm32f1xx_device_pkg}@${stm32f1xx_device_ver}")
    stm32f1xx_device_ret = exec_script("${mds_script_dir}/package.py",
                                       [
                                         "${stm32f1xx_device_pkg}",
                                         "-u=${stm32f1xx_device_url}",
                                         "-v=${stm32f1xx_device_ver}",
                                         "-a=${stm32f1xx_device_api}",
                                         "-m=name:v(.*)",
                                         "-d=${mds_download_dir}",
                                         "-p=${mds_package_dir}",
                                       ],
                                       "string")
  } else {
    print("<< package ${stm32f1xx_device_pkg} in ${stm32f1xx_device_def}")
  }
}

declare_args() {
  if (stm32f1xx_device_def == "") {
    stm32f1xx_device_dir = "${mds_package_dir}/${stm32f1xx_device_pkg}/${stm32f1xx_device_ret}/cmsis_device_f1-${stm32f1xx_device_ret}"
  } else {
    stm32f1xx_device_dir = stm32f1xx_device_def
  }
}

pkggroup("chip/cmsis") {
  configs = [ ":cmsis_core" ]
}

config("stm32f1xx_device_config") {
  include_dirs = [ "${stm32f1xx_device_dir}/Include" ]

  defines = [ "${stm32f1xx_device_define}" ]
}

source_set("stm32f1xx_system") {
  sources = [ "${stm32f1xx_device_dir}/Source/Templates/system_stm32f1xx.c" ]

  public_configs = [ ":stm32f1xx_device_config" ]

  public_deps = [ ":chip/cmsis" ]
}
